# OpenSpace-Hackathon

./: README.md  chainlink-pre.md  readme.md
projects/: 66_web3-lottery
projects/11_Luckeia/: README.md
projects/13_Wlsx_Market/: Readme.md
projects/16_TCMerit/: TCMerit.md  readme.md
projects/17_AuctionClub/: readme.md
projects/1_UpchainProject/: Readme.md  readme.md
projects/21_SocialKing/: README.md
projects/25_Uncharted Waters/: Readme.md
projects/2_metaX_network/: Readme.md
projects/30_zkStark: Wukong/: README.md
projects/31_MDLedger/: README.md  demoshow.key
projects/32_RedPacket/: ReadMe.md
projects/34_EchoEcho/: readme.md
projects/35_SmartContractAudit/: readme.md
projects/3_metaX_network/: readme.md
projects/40_SolanaSniper/: README.md  自动狙击_Solana_Token_Bot.pptx
projects/44_FlightClub/: readme.md
projects/49_BlendFinance/: readme.md
projects/51_CFCoLearning/: README.md
projects/53_LaiWallet/: README.md
projects/55_0xcafedotfun/: readme.md
projects/56_SolanaDeployResumeTool/: .gitignore  Cargo.toml  README.md
projects/56_SolanaDeployResumeTool/examples/: demo.rs  demo_offline.rs
projects/56_SolanaDeployResumeTool/frontend/: index.html
projects/56_SolanaDeployResumeTool/src/: lib.rs  main.rs
projects/56_SolanaDeployResumeTool/src/api/: mod.rs  routes.rs  server.rs  websocket.rs
projects/56_SolanaDeployResumeTool/src/cli/: analyze.rs  cleanup.rs  deploy.rs  list.rs  mod.rs  resume.rs  server.rs  status.rs
projects/56_SolanaDeployResumeTool/src/core/: mod.rs  network.rs  optimizer.rs  performance.rs  resume.rs  retry.rs  state.rs  types.rs
projects/58_WalletCard/: readme.md
projects/61_OpenFlowSwap/: readme.md
projects/66_RenToken/: presentation.md  readme.md
projects/67_MindShow/: presentation.md  readme.md
projects/68_ForgeCommander/: readme.md
projects/69_KekeSwap/: readme.md
projects/6_web3easyaccess/: README.md
projects/7_DeepChat/: Readme.md
projects/8_LuckyTask/: Readme.md 
projects/9_TicketGo/: Readme.md
